WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
62343
Regression
r86632
: Blank pages appear at the end of some wikipedia documents when printing
https://bugs.webkit.org/show_bug.cgi?id=62343
Summary
Regression r86632: Blank pages appear at the end of some wikipedia documents ...
Emil A Eklund
Reported
2011-06-08 17:16:05 PDT
What steps will reproduce the problem? 1. Visit
http://en.wikipedia.org/wiki/Football
2. open print preview (in portrait mode) What is the expected output? There are no blank pages at the end. What do you see instead? 2 blank pages at the end of the document. This does not happen if the layout mode is switched to landscape. Reported downstream for chromium:
http://code.google.com/p/chromium/issues/detail?id=84278
Attachments
Patch
(2.29 KB, patch)
2011-06-08 18:04 PDT
,
Emil A Eklund
no flags
Details
Formatted Diff
Diff
Patch
(5.68 KB, patch)
2011-06-10 10:51 PDT
,
Emil A Eklund
no flags
Details
Formatted Diff
Diff
Archive of layout-test-results from ec2-cr-linux-01
(2.42 MB, application/zip)
2011-06-10 11:43 PDT
,
WebKit Review Bot
no flags
Details
Patch for landing
(6.07 KB, patch)
2011-06-10 12:01 PDT
,
Emil A Eklund
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Emil A Eklund
Comment 1
2011-06-08 18:04:35 PDT
Created
attachment 96520
[details]
Patch
Emil A Eklund
Comment 2
2011-06-08 18:05:28 PDT
I'm having a harder than expected time coming up with a good test for this but I'll keep trying.
Alexey Proskuryakov
Comment 3
2011-06-09 00:16:10 PDT
r85573
is for "The web process locks up when the plug-in process crashes", so this seems to be caused by some other revision.
Emil A Eklund
Comment 4
2011-06-09 10:28:55 PDT
Err, should be 86632.
http://trac.webkit.org/changeset/86632
Emil A Eklund
Comment 5
2011-06-10 10:51:17 PDT
Created
attachment 96758
[details]
Patch
Emil A Eklund
Comment 6
2011-06-10 10:51:33 PDT
Added test.
Eric Seidel (no email)
Comment 7
2011-06-10 10:55:43 PDT
Comment on
attachment 96758
[details]
Patch OK.
WebKit Review Bot
Comment 8
2011-06-10 11:43:21 PDT
Comment on
attachment 96758
[details]
Patch
Attachment 96758
[details]
did not pass chromium-ews (chromium-xvfb): Output:
http://queues.webkit.org/results/8830109
New failing tests: printing/page-count-relayout-shrink.html
WebKit Review Bot
Comment 9
2011-06-10 11:43:27 PDT
Created
attachment 96766
[details]
Archive of layout-test-results from ec2-cr-linux-01 The attached test failures were seen while running run-webkit-tests on the chromium-ews. Bot: ec2-cr-linux-01 Port: Chromium Platform: Linux-2.6.35-28-virtual-x86_64-with-Ubuntu-10.10-maverick
Emil A Eklund
Comment 10
2011-06-10 11:52:24 PDT
Argh, hardly surprising that the results are different across platforms but I'd hoped to avoid platform specific results. :(
Emil A Eklund
Comment 11
2011-06-10 12:01:43 PDT
Created
attachment 96769
[details]
Patch for landing
WebKit Review Bot
Comment 12
2011-06-10 12:44:51 PDT
Comment on
attachment 96769
[details]
Patch for landing Clearing flags on attachment: 96769 Committed
r88556
: <
http://trac.webkit.org/changeset/88556
>
WebKit Review Bot
Comment 13
2011-06-10 12:45:02 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug