2011-06-10  Emil A Eklund  <eae@chromium.org>

Reviewed by Eric Seidel.

        Regression r85573: Blank pages appear at the end of some wikipedia documents.
        https://bugs.webkit.org/show_bug.cgi?id=62343

        Fix regression caused by r85573. Cached document size not updated after layout.

        * platform/chromium-linux/printing/page-count-relayout-shrink-expected.txt: Added.
        * platform/mac/printing/page-count-relayout-shrink-expected.txt: Added.
        * printing/page-count-relayout-shrink.html: Added.
2011-06-10  Emil A Eklund  <eae@chromium.org>

        Reviewed by Eric Seidel.

        Regression r85573: Blank pages appear at the end of some wikipedia documents.
        https://bugs.webkit.org/show_bug.cgi?id=62343

        Fix regression caused by r85573. Cached document size not updated after layout.

        Test: printing/page-count-relayout-shrink.html

        * page/FrameView.cpp:
        (WebCore::FrameView::forceLayoutForPagination):

Canonical link: https://commits.webkit.org/77961@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@88556 268f45cc-cd09-0410-ab3c-d52691b4dbfc